// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "icon" prop 1`] = `
.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem 0.5rem;
  font-weight: bold;
  border-radius: 12px;
  white-space: nowrap;
  line-height: 1rem;
  background: #DCDCE0;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  font-size: 1rem;
  margin-right: 0.25rem;
}

<div>
  <span
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
    >
      <defs>
        <path
          d="M12 12a5 5 0 1 1 0-10 5 5 0 0 1 0 10zM2 20c0-4 2.001-6 6.004-6H16c4 0 6 2 6 6 0 1.333-.667 2-2 2H4c-1.333 0-2-.667-2-2z"
          id="user-filled_svg__a"
        />
      </defs>
      <use
        xlink:href="#user-filled_svg__a"
      />
    </svg>
    With icon
  </span>
</div>
`;

exports[`should accept "removable" prop and render remove icon 1`] = `
.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem 0.5rem;
  font-weight: bold;
  border-radius: 12px;
  white-space: nowrap;
  line-height: 1rem;
  background: #DCDCE0;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  font-size: 1rem;
  margin-left: 0.125rem;
}

.emotion-0:hover {
  cursor: pointer;
  color: #D83A2E;
}

<div>
  <span
    class="emotion-1"
  >
    Removable
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0z"
      />
    </svg>
  </span>
</div>
`;

exports[`should accept the style prop 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem 0.5rem;
  font-weight: bold;
  border-radius: 12px;
  white-space: nowrap;
  line-height: 1rem;
  background: #DCDCE0;
  color: green;
}

<div>
  <span
    class="emotion-0"
  >
    Normal
  </span>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem 0.5rem;
  font-weight: bold;
  border-radius: 12px;
  white-space: nowrap;
  line-height: 1rem;
  background: #DCDCE0;
}

<div>
  <span
    class="emotion-0"
  >
    Normal
  </span>
</div>
`;

exports[`should render correctly 2`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem 0.5rem;
  font-weight: bold;
  border-radius: 12px;
  white-space: nowrap;
  line-height: 1rem;
  background: #BF4600;
  color: #FFFFFF;
}

<div>
  <span
    class="emotion-0"
  >
    Alert
  </span>
</div>
`;

exports[`should render correctly 3`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem 0.5rem;
  font-weight: bold;
  border-radius: 12px;
  white-space: nowrap;
  line-height: 1rem;
  background: #D83A2E;
  color: #FFFFFF;
}

<div>
  <span
    class="emotion-0"
  >
    Danger
  </span>
</div>
`;

exports[`should render correctly 4`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem 0.5rem;
  font-weight: bold;
  border-radius: 12px;
  white-space: nowrap;
  line-height: 1rem;
  background: #0A67D1;
  color: #FFFFFF;
}

<div>
  <span
    class="emotion-0"
  >
    Info
  </span>
</div>
`;

exports[`should render correctly 5`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem 0.5rem;
  font-weight: bold;
  border-radius: 12px;
  white-space: nowrap;
  line-height: 1rem;
  background: #097D05;
  color: #FFFFFF;
}

<div>
  <span
    class="emotion-0"
  >
    Success
  </span>
</div>
`;
